--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="search">Search</string>
     <string name="appbarRefresh">Refresh</string>
     <string name="appbarAbout">About</string>
+    <string name="Sort">Sort</string>
 </resources>
