--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="total_deaths">Total Deaths</string>
     <string name="total_recovered">Total Recovered</string>
     <string name="global_graph_description">COVID-19 Timeline</string>
+    <string name="since_yesterday">+%s%% since yesterday</string>
 </resources>
