--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="global">Global</string>
     <string name="piechart_dataset_label">Global COVID-19 Progression</string>
     <string name="settings_activity_label">Settings</string>
+    <string name="custom_covid_card_default_title">Title</string>
 </resources>
